// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not create empty container blocks around ol and their list items 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "something",
    "type": "ordered-list-item",
  },
]
`;

exports[`Should not create empty container blocks around ol and their list items when nesting enabled 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "nextSibling": null,
    "parent": null,
    "prevSibling": null,
    "text": "something",
    "type": "ordered-list-item",
  },
]
`;

exports[`Should not create empty container blocks around ul and their list items 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "something",
    "type": "unordered-list-item",
  },
]
`;

exports[`Should not create empty container blocks around ul and their list items when nesting enabled 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "nextSibling": null,
    "parent": null,
    "prevSibling": null,
    "text": "something",
    "type": "unordered-list-item",
  },
]
`;

exports[`converts deeply nested html blocks when experimentalTreeDataSupport is enabled 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "nextSibling": "key1",
    "parent": null,
    "prevSibling": null,
    "text": "Some quote",
    "type": "ordered-list-item",
  },
  Object {
    "characterList": Array [],
    "children": Array [
      "key2",
    ],
    "data": Object {},
    "depth": 0,
    "key": "key1",
    "nextSibling": null,
    "parent": null,
    "prevSibling": "key0",
    "text": "",
    "type": "ordered-list-item",
  },
  Object {
    "characterList": Array [],
    "children": Array [
      "key3",
      "key4",
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "nextSibling": null,
    "parent": "key1",
    "prevSibling": null,
    "text": "",
    "type": "blockquote",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key3",
    "nextSibling": "key4",
    "parent": "key2",
    "prevSibling": null,
    "text": "Hello World! ",
    "type": "header-one",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key4",
    "nextSibling": null,
    "parent": "key2",
    "prevSibling": "key3",
    "text": "lorem ipsum 
 ",
    "type": "unstyled",
  },
]
`;

exports[`converts nested html blocks when experimentalTreeDataSupport is enabled 1`] = `
Array [
  Object {
    "characterList": Array [],
    "children": Array [
      "key1",
      "key2",
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "nextSibling": null,
    "parent": null,
    "prevSibling": null,
    "text": "",
    "type": "blockquote",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key1",
    "nextSibling": "key2",
    "parent": "key0",
    "prevSibling": null,
    "text": "Hello World!
 ",
    "type": "header-one",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "nextSibling": null,
    "parent": "key0",
    "prevSibling": "key1",
    "text": "lorem ipsum
 ",
    "type": "unstyled",
  },
]
`;

exports[`converts text nodes to unstyled elements when leading nested blocks when experimentalTreeDataSupport is enabled 1`] = `
Array [
  Object {
    "characterList": Array [],
    "children": Array [
      "key2",
      "key1",
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "nextSibling": null,
    "parent": null,
    "prevSibling": null,
    "text": "",
    "type": "blockquote",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "nextSibling": "key1",
    "parent": "key0",
    "prevSibling": null,
    "text": "      Hello World!       ",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key1",
    "nextSibling": null,
    "parent": "key0",
    "prevSibling": "key2",
    "text": "lorem ipsum
 ",
    "type": "header-one",
  },
]
`;

exports[`does not convert deeply nested html blocks when experimentalTreeDataSupport is disabled 1`] = `false`;

exports[`does not convert deeply nested html blocks when experimentalTreeDataSupport is disabled 2`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "Some quote",
    "type": "ordered-list-item",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": Array [],
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "Hello World!
 lorem ipsum
 
 ",
    "type": "ordered-list-item",
  },
]
`;

exports[`img with data protocol should be correctly parsed 1`] = `"📷"`;

exports[`img with http protocol should have camera emoji content 1`] = `"📷"`;

exports[`must convert root ContentBlockNodes to matching ContentBlock nodes for <blockquote /> 1`] = `true`;

exports[`must convert root ContentBlockNodes to matching ContentBlock nodes for <div /> 1`] = `true`;

exports[`must convert root ContentBlockNodes to matching ContentBlock nodes for <figure /> 1`] = `true`;

exports[`must convert root ContentBlockNodes to matching ContentBlock nodes for <h1 /> 1`] = `true`;

exports[`must convert root ContentBlockNodes to matching ContentBlock nodes for <h2 /> 1`] = `true`;

exports[`must convert root ContentBlockNodes to matching ContentBlock nodes for <h3 /> 1`] = `true`;

exports[`must convert root ContentBlockNodes to matching ContentBlock nodes for <h4 /> 1`] = `true`;

exports[`must convert root ContentBlockNodes to matching ContentBlock nodes for <h5 /> 1`] = `true`;

exports[`must convert root ContentBlockNodes to matching ContentBlock nodes for <h6 /> 1`] = `true`;

exports[`must convert root ContentBlockNodes to matching ContentBlock nodes for <li /> 1`] = `true`;

exports[`must convert root ContentBlockNodes to matching ContentBlock nodes for <p /> 1`] = `true`;

exports[`must convert root ContentBlockNodes to matching ContentBlock nodes for <pre /> 1`] = `true`;

exports[`must not merge tags when converting adjacent <blockquote /> 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "blockquote",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "blockquote",
  },
]
`;

exports[`must not merge tags when converting adjacent <blockquote /> 2`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "blockquote",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "blockquote",
  },
]
`;

exports[`must not merge tags when converting adjacent <div /> 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "unstyled",
  },
]
`;

exports[`must not merge tags when converting adjacent <div /> 2`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "unstyled",
  },
]
`;

exports[`must not merge tags when converting adjacent <figure /> 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "atomic",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "atomic",
  },
]
`;

exports[`must not merge tags when converting adjacent <figure /> 2`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "atomic",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "atomic",
  },
]
`;

exports[`must not merge tags when converting adjacent <h1 /> 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-one",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "header-one",
  },
]
`;

exports[`must not merge tags when converting adjacent <h1 /> 2`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-one",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "header-one",
  },
]
`;

exports[`must not merge tags when converting adjacent <h2 /> 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-two",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "header-two",
  },
]
`;

exports[`must not merge tags when converting adjacent <h2 /> 2`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-two",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "header-two",
  },
]
`;

exports[`must not merge tags when converting adjacent <h3 /> 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-three",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "header-three",
  },
]
`;

exports[`must not merge tags when converting adjacent <h3 /> 2`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-three",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "header-three",
  },
]
`;

exports[`must not merge tags when converting adjacent <h4 /> 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-four",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "header-four",
  },
]
`;

exports[`must not merge tags when converting adjacent <h4 /> 2`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-four",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "header-four",
  },
]
`;

exports[`must not merge tags when converting adjacent <h5 /> 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-five",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "header-five",
  },
]
`;

exports[`must not merge tags when converting adjacent <h5 /> 2`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-five",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "header-five",
  },
]
`;

exports[`must not merge tags when converting adjacent <h6 /> 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-six",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "header-six",
  },
]
`;

exports[`must not merge tags when converting adjacent <h6 /> 2`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "header-six",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "header-six",
  },
]
`;

exports[`must not merge tags when converting adjacent <li /> 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "unordered-list-item",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "unordered-list-item",
  },
]
`;

exports[`must not merge tags when converting adjacent <li /> 2`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "unordered-list-item",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "unordered-list-item",
  },
]
`;

exports[`must not merge tags when converting adjacent <p /> 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "unstyled",
  },
]
`;

exports[`must not merge tags when converting adjacent <p /> 2`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "unstyled",
  },
]
`;

exports[`must not merge tags when converting adjacent <pre /> 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "code-block",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "code-block",
  },
]
`;

exports[`must not merge tags when converting adjacent <pre /> 2`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "a",
    "type": "code-block",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": Array [],
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "b",
    "type": "code-block",
  },
]
`;
